# crypto-portfolio-tracker

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_FIXES.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  start.sh
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  health.py  portfolio.py  wallets.py
app/core/: __init__.py  config.py
app/db/: __init__.py  database.py  redis_cache.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  coingecko_price_service.py  cosmos_service.py  ethereum_service.py  price_service.py  solana_service.py  starknet_service.py  wallet_service.py
app/utils/: __init__.py  logging.py
migrations/: 001_increase_token_symbol_length.sql  README.md  apply_migration.sh
scripts/: entrypoint.sh
tests/: README.md  __init__.py  conftest.py  test_health.py  test_wallets.py
